# cuCascade

./: CMakeLists.txt  README.md
.github/: ops-bot.yaml
include/data/: common.hpp  cpu_data_representation.hpp  data_batch.hpp  gpu_data_representation.hpp  representation_converter.hpp
src/data/: CMakeLists.txt  cpu_data_representation.cpp  data_batch.cpp  gpu_data_representation.cpp  representation_converter.cpp
src/memory/: CMakeLists.txt
test/: CMakeLists.txt  unittest.cpp
test/data/: CMakeLists.txt  test_data_batch.cpp  test_data_repository.cpp  test_data_repository_manager.cpp  test_data_representation.cpp  test_representation_converter.cpp
test/memory/: CMakeLists.txt
test/utils/: CMakeLists.txt  cudf_test_utils.cpp  cudf_test_utils.hpp
